# Project-Swarm

./: .gitattributes  .gitignore  README.md  app.py  execution_engine.py  models.py  pyproject.toml
attached_assets/: Pasted--Project-Specification-Document-Project-Swarm-v1-1-Project-Overview-Project-Swarm-is-a-fully-m-1747496157828.txt
backend/: pyproject.toml
backend/app/: auth.py  config.py  db.py  google.py  main.py  models.py  schemas.py  security.py
backend/app/engine/: credentials.py  executor.py  fields.py  graph.py  registry.py  runs.py  templating.py  types.py
backend/app/nodes/: _files.py  _google.py  calendar_create_event.py  calendar_list_events.py  delay.py  docs_create.py  drive_upload.py  gmail_read.py  gmail_send.py  http_request.py  if_condition.py  llm.py  manual_trigger.py  read_file.py  set_variable.py  sheets_append.py  sheets_read.py  transform.py  write_file.py
backend/app/routes/: auth_routes.py  credential_routes.py  node_routes.py  run_routes.py  workflow_routes.py
backend/tests/: .test.db  conftest.py  test_api.py  test_credentials.py  test_engine.py  test_google_nodes.py  test_partial_run.py  test_registry.py  test_rules.py
control_nodes/: __init__.py  chatgpt_api.py  cron_trigger.py  data_transform.py  deepseek_api.py  delay.py  email_send.py  gmail_read.py  gmail_send.py  http_request.py  if_condition.py  javascript_code.py  manual_trigger.py  merge.py  read_file.py  read_from_sheets.py  save_to_sheets.py  set_variable.py  wait.py  webhook_response.py  webhook_trigger.py  write_file.py
frontend/: index.html  package-lock.json  (+3 more)
(+43 files in other folders)
